[package]
name = "karst_en_knokken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy = { version = "0.10.1", features = [ 
    "bevy_asset",         
    "bevy_audio",         
    "bevy_gilrs",         
    "bevy_scene",         
    "bevy_winit",         
    "bevy_render",        
    "bevy_core_pipeline", 
    "bevy_sprite",   
    "bevy_ui",
    "png"
], default-features = false}
bevy-debug-text-overlay = {version="5.1.0", optional=true}

[profile.dev.package."*"]
opt-level = 3

[features]
dev = ["bevy/bevy_dylib","dep:bevy-debug-text-overlay"]



